--- a/ShopOnline.API/appsettings.json
+++ b/ShopOnline.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ShopOnlineConnection": "Server=MertPC;Database=ShopOnline;Trusted_Connection=True"
+    "ShopOnlineConnection": "Server=DESKTOP-G1PG9AA;Database=ShopOnline;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
