--- a/ShopOnline.API/ShopOnline.API.csproj
+++ b/ShopOnline.API/ShopOnline.API.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShopOnline.Web\ShopOnline.Web.csproj" />
+  </ItemGroup>
+
 </Project>
